@@ -8,6 +8,7 @@ import com.example.musing.artist.repository.Artist_MusicRepository;
 import com.example.musing.board.dto.*;
 import com.example.musing.board.entity.Board;
 import com.example.musing.board.repository.BoardRepository;
+import com.example.musing.common.utils.S3.AWS_S3_Util;
 import com.example.musing.exception.CustomException;
 import com.example.musing.genre.dto.GenreDto;
 import com.example.musing.genre.entity.Genre;
@@ -21,12 +22,9 @@ import com.example.musing.main.dto.RecommendBoardRight;
 import com.example.musing.mood.dto.MoodDto;
 import com.example.musing.mood.entity.MoodEnum;
 import com.example.musing.mood.entity.Mood_Music;
-import com.example.musing.mood.repository.Mood_MusicRepository;
 import com.example.musing.music.entity.Music;
 import com.example.musing.music.repository.MusicRepository;
-import com.example.musing.reply.dto.ReplyRequestDto;
 import com.example.musing.reply.dto.ReplyResponseDto;
-import com.example.musing.reply.repository.ReplyRepository;
 import com.example.musing.reply.service.ReplyService;
 import com.example.musing.user.entity.User;
 import com.example.musing.user.repository.UserRepository;
@@ -44,8 +42,6 @@ import org.springframework.web.multipart.MultipartFile;
 import java.util.*;
 import java.util.stream.Collectors;
 
-import static com.example.musing.board.entity.CheckRegister.NEED_FIX;
-import static com.example.musing.board.entity.CheckRegister.PERMIT;
 import static com.example.musing.exception.ErrorCode.*;
 
 @Transactional(readOnly = true)
@@ -57,6 +53,8 @@ public class BoardServiceImpl implements BoardService {
             of(0, 5, Sort.by(Sort.Direction.DESC, "createdAt"));
     private static PageRequest pageRequest = PageRequest.of(0, 1);
     private static int PAGESIZE = 8;
+    private static String S3BUCKETURL = "board";
+
     private final UserRepository userRepository;
     private final BoardRepository boardRepository;
     private final ArtistRepository artistRepository;
@@ -66,6 +64,7 @@ public class BoardServiceImpl implements BoardService {
     private final GenreRepository genreRepository;
     private final Artist_MusicRepository artist_musicRepository;
     private final Genre_MusicRepository genre_musicRepository;
+    private final AWS_S3_Util awsS3Util;
 
     @Override
     public List<GenreBoardDto> findBy5GenreBoard(String genre) { //장르로 검색한 게시글들을 엔티티에서 Dto로 전환
@@ -123,82 +122,56 @@ public class BoardServiceImpl implements BoardService {
     @Override
     @Transactional
     public void createBoard(CreateBoardRequest request, List<MultipartFile> images) {
-        // 유저명 저장
-        String userId = SecurityContextHolder.getContext().getAuthentication().getName();
+        // Music 저장
+        Music music = Music.of(request);
+        musicRepository.save(music);
 
-        // 파일명 리스트 생성
-        List<String> fileNames = new ArrayList<>();
-        if (images == null || images.isEmpty()) {
-            fileNames.add("이미지 없음");
-        } else {
-            // 이미지가 있는 경우 파일명 생성
-            for (MultipartFile file : images) {
-                String fileName = UUID.randomUUID() + "_" + file.getOriginalFilename();
-                // 파일 저장 로직 작성 필요함(서버나 S3에 저장)
-                fileNames.add(fileName);
+        // Artist 확인 및 저장, 중간 테이블 저장
+        List<Artist_Music> artistMusics = new ArrayList<>();
+
+        for (String artistName : request.getArtist()) {
+            Optional<Artist> optionalArtist = artistRepository.findByName(artistName);
+
+            if (optionalArtist.isEmpty()) { //해당 아티스트가 존재하지 않을 때
+                Artist artist = Artist.of(artistName);
+                artistRepository.save(artist);
+
+                artistMusics.add(Artist_Music.of(
+                        artist, music));
+            } else {
+                artistMusics.add(Artist_Music.of(
+                        optionalArtist.get(), music)); //바로 불러와서 중간 테이블을 저장하기 위한 리스트에 적재
             }
         }
 
-        // Artist 저장
-        Artist artist = Artist.builder()
-                .name(request.getArtist()) // request.getArtist()는 Artist의 이름(String)이라고 가정
-                .build();
+        artist_musicRepository.saveAll(artistMusics);
 
-        // Music 저장
-        Music music = Music.builder()
-                .name(request.getMusicTitle())
-                .playtime(request.getPlaytime())
-                .albumName(request.getAlbumName())
-                .songLink(request.getSongLink())
-                .thumbNailLink(request.getThumbNailLink())
-                .build();
-
-        Artist_Music artistMusic = Artist_Music.of(artist, music);
-
-
-        Long genreId = request.getGenre();
-        if (genreId == null || genreId <= 0) {
+        //받은 장르의 Id리스트 여부 체크
+        if (request.getGenre() == null || request.getGenre().isEmpty()) {
             throw new CustomException(NOT_FOUND_GENRE);
         }
 
+        // 중간테이블 저장을 위한 테이블 선언
+        List<Genre_Music> musicGenre = new ArrayList<>();
 
-        Genre genre = genreRepository.findById(genreId).orElseThrow(() -> new CustomException(NOT_FOUND_GENRE));
+        // 장르 Id확인 후 저장을 위한 리스트 적재
+        for (Long genreId : request.getGenre()) {
+            Genre genre = genreRepository.findById(genreId).orElseThrow(() -> new CustomException(NOT_FOUND_GENRE));
 
-        // Music과 Genre를 중간 테이블을 통해 연결
-        Genre_Music musicGenre = Genre_Music.of(music, genre);
-
-        artistRepository.save(artist); // Artist 먼저 저장
-        musicRepository.save(music);
-
-
-        genre_musicRepository.save(musicGenre); // Genre_Music 저장 (중간 테이블)
-        artist_musicRepository.save(artistMusic);
-
-
-        Long musicId = music.getId();
-        if (musicId != null) {
-            System.out.println("자동 생성된 Music ID: " + musicId);
-        } else {
-            System.out.println("Music ID가 자동으로 생성되지 않았습니다.");
+            // Music과 Genre를 중간 테이블을 통해 연결
+            musicGenre.add(Genre_Music.of(music, genre));
         }
 
+        genre_musicRepository.saveAll(musicGenre); // Genre_Music 저장 (중간 테이블)
 
         User user = userRepository.findById(SecurityContextHolder
                 .getContext()
                 .getAuthentication()
                 .getName()).orElseThrow(() -> new CustomException(NOT_FOUND_USER));
 
-        // Board 저장
-        Board board = Board.builder()
-                .user(user)
-                .music(music)
-                .title(request.getTitle())
-                .content(request.getContent())
-                .image(String.join(",", fileNames)) // 파일명은 ,로 구분 지어 저장
-                .activeCheck(false)
-                .recommendCount(0)
-                .viewCount(0)
-                .build();
+        String imageString = uploadImages(images) == null ? null : uploadImages(images).toString();
+
+        Board board = Board.of(user, music, request.getTitle(), request.getContent(), imageString);
         boardRepository.save(board); // Board 저장 (최종적으로 Board를 저장)
     }
 
@@ -270,78 +243,96 @@ public class BoardServiceImpl implements BoardService {
 
     @Override
     @Transactional
-    public void updateBoard(UpdateBoardRequestDto request, List<MultipartFile> images) {
+    public void updateBoard(Long boardId, UpdateBoardRequestDto request,
+                            List<String> deleteFileLinks, List<MultipartFile> newFiles) {
         // 유저명 저장
         String userId = SecurityContextHolder.getContext().getAuthentication().getName();
 
         // 기존 Board 객체를 찾기
-        Board board = boardRepository.findById(request.getBoardId())
+        Board board = boardRepository.findById(boardId)
                 .orElseThrow(() -> new CustomException(NOT_FOUND_BOARD));
 
-        // Board에 관련된 Music 객체를 찾기
-        Music music = board.getMusic();
 
-        // 파일명 리스트 생성
-        List<String> fileNames = new ArrayList<>();
-        if (images == null || images.isEmpty()) {
-            fileNames.add("이미지 없음");
-        } else {
-            // 이미지가 있는 경우 파일명 생성
-            for (MultipartFile file : images) {
-                String fileName = UUID.randomUUID() + "_" + file.getOriginalFilename();
-                // 파일 저장 로직 작성 필요함(서버나 S3에 저장)
-                fileNames.add(fileName);
+        if (!Objects.equals(board.getUser().getId(), userId)) {
+            throw new CustomException(NOT_MATCHED_BOARD_AND_USER);
+        }
+
+        // 이미지 가져오기
+        List<String> images = board.getImageList();
+
+        if (images == null) {
+            images = new ArrayList<>();
+        }
+
+        if (deleteFileLinks != null&& !deleteFileLinks.isEmpty()) {
+            images.removeIf(imageUrl -> {
+                if (deleteFileLinks.contains(imageUrl)) {
+                    String filename = extractFilename(imageUrl);
+                    awsS3Util.deleteFile(S3BUCKETURL, filename);
+                    return true;
+                }
+                return false;
+            });
+        }
+
+        if (newFiles != null && !newFiles.isEmpty()) {
+            List<String> newImageUrls = uploadImages(newFiles);
+            images.addAll(newImageUrls);
+        }
+
+        // Music 정보 업데이트
+        Music music = board.getMusic().updateMusic(request);
+        musicRepository.save(music);
+
+        // 기존 Artist_Music 관계 삭제
+        artist_musicRepository.deleteByMusic(music);
+
+        // Artist 확인 및 저장, 중간 테이블 저장
+        List<Artist_Music> artistMusics = new ArrayList<>();
+
+        for (String artistName : request.getArtist()) {
+            Optional<Artist> optionalArtist = artistRepository.findByName(artistName);
+
+            if (optionalArtist.isEmpty()) { //해당 아티스트가 존재하지 않을 때
+                Artist artist = Artist.of(artistName);
+                artistRepository.save(artist);
+
+                artistMusics.add(Artist_Music.of(
+                        artist, music));
+            } else {
+                artistMusics.add(Artist_Music.of(
+                        optionalArtist.get(), music)); //바로 불러와서 중간 테이블을 저장하기 위한 리스트에 적재
             }
         }
 
-        // Artist 업데이트 또는 새로 생성
-        Artist artist = artistRepository.findByName(request.getArtist())
-                .orElseGet(() -> Artist.builder()
-                        .name(request.getArtist())
-                        .build());
-        artistRepository.save(artist);
+        artist_musicRepository.saveAll(artistMusics);
 
-        // Music 정보 업데이트 (빌더 사용)
-        music = Music.builder()// Music 객체를 빌더로 변환하여 업데이트
-                .name(request.getMusicTitle())
-                .playtime(request.getPlaytime())
-                .songLink(request.getSongLink())
-                .albumName(request.getAlbumName())
-                .thumbNailLink(request.getThumbNailLink())
-                .build();
+        // 기존 Gener_Music 관계 삭제
+        genre_musicRepository.deleteByMusic(music);
+        //받은 장르의 Id리스트 여부 체크
+        if (request.getGenre() == null || request.getGenre().isEmpty()) {
+            throw new CustomException(NOT_FOUND_GENRE);
+        }
 
-        musicRepository.save(music);
+        // 중간테이블 저장을 위한 테이블 선언
+        List<Genre_Music> musicGenre = new ArrayList<>();
 
-        // 기존 중간 테이블에 저장된 Artist와 Music 관계 업데이트 (이전 관계를 삭제 후 새로 저장)
-        artist_musicRepository.deleteByMusic(music); // 기존 관계 삭제
-        Artist_Music artistMusic = Artist_Music.of(artist, music);
-        artist_musicRepository.save(artistMusic); // 새 관계 저장
+        // 장르 Id확인 후 저장을 위한 리스트 적재
+        for (Long genreId : request.getGenre()) {
+            Genre genre = genreRepository.findById(genreId).orElseThrow(() -> new CustomException(NOT_FOUND_GENRE));
 
-        // Genre 업데이트 (장르가 존재하면 이를 Music과 연결)
-        Genre genre = genreRepository.getById(request.getGenre());
+            // Music과 Genre를 중간 테이블을 통해 연결
+            musicGenre.add(Genre_Music.of(music, genre));
+        }
 
-        // 기존 중간 테이블에 저장된 Genre와 Music 관계 업데이트 (이전 관계를 삭제 후 새로 저장)
-        genre_musicRepository.deleteByMusic(music);// 기존 관계 삭제
-        Genre_Music musicGenre = Genre_Music.of(music, genre);
-        genre_musicRepository.save(musicGenre); // 새 관계 저장
+        genre_musicRepository.saveAll(musicGenre); // Genre_Music 저장 (중간 테이블)
 
-        // Board 정보 업데이트 (빌더 사용)
-        board = Board.builder() // Board 객체를 빌더로 변환하여 업데이트
-                .user(userRepository.findById(userId)
-                        .orElseThrow(() -> new CustomException(NOT_FOUND_USER)))
-                .music(music)
-                .title(request.getTitle())
-                .content(request.getContent())
-                .image(String.join(",", fileNames)) // 파일명은 ,로 구분 지어 저장
-                .activeCheck(false) // 필요한 경우 수정 가능
-                .recommendCount(board.getRecommendCount()) // 기존 추천 수 유지
-                .viewCount(board.getViewCount()) // 기존 조회 수 유지
-                .build();
 
-        // Board 업데이트 저장
-        boardRepository.save(board); // 영속화
+        board.updateBoard(music, request.getTitle(), request.getContent(),
+                images.isEmpty() ? null : images.toString());
     }
 
+    @Override
     public DetailResponse selectDetail(long boardId) {
         Board board = boardRepository.findBoardWithMusicAndArtist(boardId);
         if (!boardRepository.existsById(boardId)) {
@@ -351,24 +342,15 @@ public class BoardServiceImpl implements BoardService {
         Music music = board.getMusic();
 
         // 첫 번째 Music의 Artist 정보 가져오기
-        String artistNames = (music != null && !music.getArtists().isEmpty())
-                ? music.getArtists().stream()
+        List<String> artistNames = music.getArtists().stream()
                 .map(am -> am.getArtist().getName())
-                .collect(Collectors.joining(", ")) // 여러 명일 경우 쉼표로 구분
-                : null;
+                .toList();
 
-        Long genreId = (music != null && !music.getArtists().isEmpty())
-                ? music.getArtists().get(0).getArtist().getId() // 첫 번째 아티스트의 장르 ID 사용
-                : null;
+        List<String> genreNames = music.getGenreMusics().stream()
+                .map(Genre_Music::getGenre)
+                .map(genre -> genre.getGenreName().getKey()).toList();
 
-        return DetailResponse.of(board, artistNames, extractHashtags(board.getContent()), genreId);
-    }
-
-    private List<String> extractHashtags(String content) {
-        if (content == null) return Collections.emptyList();
-        return Arrays.stream(content.split("\\s+"))
-                .filter(word -> word.startsWith("#"))
-                .collect(Collectors.toList());
+        return DetailResponse.of(board, artistNames, extractHashtags(board.getContent()), genreNames);
     }
 
     // 음악 추천 게시판 상세페이지 (리뷰 포함)
@@ -380,6 +362,35 @@ public class BoardServiceImpl implements BoardService {
         return BoardAndReplyPageDto.of(boardDto, replyDtos);
     }
 
+    private String extractFilename(String imageUrl) {
+        return imageUrl.substring(imageUrl.lastIndexOf("/") + 1);
+    }
+
+    private List<String> uploadImages(List<MultipartFile> files) {
+        if (files == null || files.isEmpty()) {
+            return null;
+        }
+
+        List<String> urlList = new ArrayList<>();
+
+        for (MultipartFile file : files) {
+            // 이미지 파일명 생성
+            UUID uuid = UUID.randomUUID();
+            String fileName = uuid.toString() + "_" + file.getOriginalFilename().lastIndexOf(".");//uuid+확장자명으로 이름지정
+
+            String imageUrl = awsS3Util.uploadImageToS3(file, S3BUCKETURL, fileName);//파일 업로드
+
+            urlList.add(imageUrl);
+        }
+        return urlList;
+    }
+
+    private List<String> extractHashtags(String content) {
+        if (content == null) return Collections.emptyList();
+        return Arrays.stream(content.split("\\s+"))
+                .filter(word -> word.startsWith("#"))
+                .collect(Collectors.toList());
+    }
 
     //게시글 상세 정보
     private BoardRequestDto.BoardDto findBoard(long boardId) {
@@ -394,7 +405,7 @@ public class BoardServiceImpl implements BoardService {
         return board.getMusic().getGenreMusics().stream()
                 .map(Genre_Music::getGenre)
                 .map(GenreDto::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     //게시글의 음악에 포함된 분위기를 Dto로 담아 리스트로 반환
@@ -402,7 +413,7 @@ public class BoardServiceImpl implements BoardService {
         return board.getMusic().getMoodMusics().stream()
                 .map(Mood_Music::getMood)
                 .map(MoodDto::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     //게시글의 음악에 포함된 아티스트를 Dto로 담아 리스트로 반환
@@ -410,7 +421,7 @@ public class BoardServiceImpl implements BoardService {
         return board.getMusic().getArtists().stream()
                 .map(Artist_Music::getArtist)
                 .map(ArtistDto::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // 음악 추천 게시판 상단
@@ -425,7 +436,6 @@ public class BoardServiceImpl implements BoardService {
         }
 
         // 조건에 맞는 3개 이하의 게시글 가져오기
-        List<Board> randomBoard = selectRandomBoards(boards, 3);
         BoardListResponseDto.RecommendBoardFirstDto firstPopUpDto = findBoardListPopUpFirst(boards);
 
         List<BoardListResponseDto.BoardRecapDto> boardPopUpDto = new ArrayList<>();
@@ -437,22 +447,20 @@ public class BoardServiceImpl implements BoardService {
     }
 
     private Page<Board> searchBoards(String searchType, String keyword, Pageable pageable) {
-        switch (searchType) {
-            case "username":
-                return boardRepository.findActiveBoardsByUsername(keyword, pageable);
-            case "title":
-                return boardRepository.findActiveBoardsByTitle(keyword, pageable);
-            case "artist":
-                return boardRepository.findActiveBoardsByArtist(keyword, pageable);
-            case "genre":
+        return switch (searchType) {
+            case "username" -> boardRepository.findActiveBoardsByUsername(keyword, pageable);
+            case "title" -> boardRepository.findActiveBoardsByTitle(keyword, pageable);
+            case "artist" -> boardRepository.findActiveBoardsByArtist(keyword, pageable);
+            case "genre" -> {
                 GerneEnum gerneEnum = GerneEnum.fromKey(keyword);
-                return boardRepository.findActiveBoardsByGenre(gerneEnum, pageable);
-            case "mood":
+                yield boardRepository.findActiveBoardsByGenre(gerneEnum, pageable);
+            }
+            case "mood" -> {
                 MoodEnum moodEnum = MoodEnum.fromKey(keyword);
-                return boardRepository.findActiveBoardsByMood(moodEnum, pageable);
-            default:
-                throw new CustomException(NOT_FOUND_KEYWORD);
-        }
+                yield boardRepository.findActiveBoardsByMood(moodEnum, pageable);
+            }
+            default -> throw new CustomException(NOT_FOUND_KEYWORD);
+        };
     }
 
     private List<Board> findBySpecBoard(Specification<Board> spec) {
@@ -462,23 +470,6 @@ public class BoardServiceImpl implements BoardService {
     private List<Board> findBySpecBoard(Specification<Board> spec, PageRequest request) {
         Page<Board> boards = boardRepository.findAll(spec, request); //조건에 부합하는 게시글 전부가져오기
         return boards.getContent();
-    }
-
-    // 랜덤한 게시글을 가져오는 메서드
-    private List<Board> selectRandomBoards(List<Board> boards, int count) {
-        int effectiveCount = Math.min(count, boards.size());
-
-        Set<Integer> selectedIndices = new HashSet<>();
-        Random random = new Random();
-
-        while (selectedIndices.size() < effectiveCount) {
-            int randomIndex = random.nextInt(boards.size());
-            selectedIndices.add(randomIndex);
-        }
-
-        return selectedIndices.stream()
-                .map(boards::get)
-                .collect(Collectors.toList());
     }
 
     private BoardListResponseDto.RecommendBoardFirstDto findBoardListPopUpFirst(List<Board> boards) {
